<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.RWdesenv.SMSM.ScrollingActivity">

    <item
        android:id="@+id/action_picture"
        android:orderInCategory="100"
        android:icon="@mipmap/camera"
        android:title="@string/action_movie"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_movie"
        android:orderInCategory="100"
        android:icon="@mipmap/video"
        android:title="@string/action_movie"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:icon="@mipmap/share"
        android:title="@string/action_share"
        app:showAsAction="always" />


    <group android:checkableBehavior="all">
        <item
            android:id="@+id/action_slow"
            android:orderInCategory="100"
            android:title="@string/action_slow"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_high"
            android:orderInCategory="100"
            android:checked="false"
            android:title="@string/action_high"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_amovie"
            android:orderInCategory="100"
            android:checked="false"
            android:title="@string/action_amovie"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_rapmovie"
            android:orderInCategory="100"
            android:checked="false"
            android:title="@string/action_rapmovie"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/action_other_ads"
        android:orderInCategory="100"
        android:title="@string/help_improve"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rw"
        android:orderInCategory="100"
        android:title="@string/rw"
        app:showAsAction="never" />

</menu>
